practices/observability/prometheus/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observ-prometheus
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   rewrite ^/observ-prometheus/(.*)$ /$1 break;
spec:
  rules:
    - http:
        paths:
          - path: /observ-prometheus/(.*)
            pathType: Prefix
            backend:
              service:
                name: observ-prometheus
                port:
                  number: 9090
