practices/observability/prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: observ-prometheus
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/observ-prometheus/(.*)$ /$1 break;
spec:
  rules:
    - http:
        paths:
          - path: /observ-prometheus
            backend:
              serviceName: observ-prometheus
              servicePort: 9090
